syntax = "proto3";

package shared;

option go_package = "github.com/ytake/go-actor-metrics-sample/shared";

message FizzBuzzRequest {
  int64 number = 1;
  string Message = 2;
}

message FizzBuzzResponse {
  int64 number = 1;
  string Message = 2;
}

service FizzService {
  rpc SayFizzBuzz (FizzBuzzRequest) returns (FizzBuzzResponse) {}
}

service BuzzService {
  rpc SayBuzz (FizzBuzzRequest) returns (FizzBuzzResponse) {}
}
